modification et ajou de deux liens

--- a/latex/Network/replay.tex
+++ b/latex/Network/replay.tex
@@ -65,4 +65,15 @@ Supposons une communication entre deux ordinateurs A et B. A va envoyer sa clef 
 \item L'utilisation d'unn nombre arbitraire (nonce) a usage unique qui sera utilisé pour signer les echanges de données
 \end{itemize}
 
+\bigskip
+
+\begin{flushleft}
+\textbf{Lien-utiles}
+\end{flushleft}
+
+\begin{itemize}
+\item \url{https://www.owasp.org/index.php/Testing_for_WS_Replay_(OWASP-WS-007)}
+\item \url{https://www.sitepoint.com/how-to-prevent-replay-attacks-on-your-website/}
+\end{itemize}
+
 \endinput
