ajout d'un croquis pour l'attaque par rejeu

--- a/latex/Network/replay.tex
+++ b/latex/Network/replay.tex
@@ -48,6 +48,12 @@ Pour capturer le trafic, le hacker pourra utiliser un script fait maison ou alor
 Supposons une communication entre deux ordinateurs A et B. A va envoyer sa clef à B pour prouver son identité. Mais un pirate est en train d'espionner cette conversation et décide de garder les informations ainsi obtenues dans la conversation entre A et B. Ces informations lui seront utiles pour se faire passer comme légitime en rejouant les données de connexion à B
 \end{flushleft}
 
+\smallskip
+
+\begin{center}
+\includegraphics[scale=0.3]{Network/assets/rejeu.png}
+\end{center}
+
 \bigskip
 
 
